fixed image positioning on mobile, will fix navbar soon

--- a/src/pages/HomeStyles.css
+++ b/src/pages/HomeStyles.css
@@ -8,11 +8,13 @@
 }
 
 .landingImage {
-  width: 700px; 
-  height: auto;
-  border-color: aquamarine;
-  border-radius: 5px;
+  padding: 0;
   position: relative;
+  border-radius: 8px;
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 
